--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "msnodesqlv8": "^0.8.7",
+    "mssql": "^6.0.1",
     "pug": "^2.0.4"
   }
 }
