--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^3.1.0",
     "msnodesqlv8": "^0.8.7",
     "mssql": "^6.0.1",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "sequelize": "^5.21.5"
   }
 }
