--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongodb": "^3.5.2",
+    "mongoose": "^5.9.2",
     "pug": "^2.0.4"
   }
 }
